# does-it-throw

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TESTING.md  build.ts  bun.lockb  commitlint.config.js  package-lock.json  package.json  vitest.config.ts
.specstory/: .gitignore
client/: package.json
crates/does-it-throw-wasm/src/: lib.rs
crates/what-does-it-throw/: Cargo.toml
crates/what-does-it-throw-wasm/: Cargo.toml
crates/what-does-it-throw/src/: call_finder.rs  callback_finder.rs  function_finder.rs  lib.rs  main.rs  param_finder.rs  throw_finder.rs  try_catch_finder.rs  typedef_finder.rs
crates/what-does-it-throw/src/fixtures/: callExpr.ts  class.js  class.ts  comprehensiveErrorFlow.ts  exports.ts  ignoreStatements.js  ignoreStatements.ts  importIdentifiers.ts  jsdocThrowsSuppression.js  jsdocThrowsSupression.ts  jsx.jsx  objectLiteral.js  objectLiteral.ts  returnStatement.ts  sample.ts  something.ts  spreadExpr.ts  switchStatement.ts  test_throw_e.ts
crates/what-does-it-throw/tests/: fixtures_comprehensive.rs
server/: package.json
server/src/: codeActions.ts  server.ts
tests/: README.md  arrow-function-detection.test.ts  basic-throw-detection.test.ts  call-assignment-suppression.test.ts  callback-throws-annotation.test.ts  comprehensive-suppression.test.ts  exact-match-suppression.test.ts  file-level-disable.test.ts  integration-disable.test.ts  it-throws-suppression.test.ts  jsdoc-typedef-callback.test.ts  real-world-fixture.test.ts  test-utils.ts  unused-it-throws-detection.test.ts  vitest-setup.ts  wallaby-test-utils.ts
(+3 files in other folders)
